# fumo

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
migrations/: 20251108010000_create_users_and_economy.sql  20251108235044_add_currency_transactions.sql  20251109190000_add_blacklist_entries.sql
src/: config.rs  constants.rs  database.rs  env.rs  fumo.rs  main.rs  models.rs
src/commands/: blacklist.rs  bot.rs  economy.rs  help.rs  jokenpo.rs  mod.rs  ping.rs  util.rs
src/commands/economy/: mod.rs  reward_kind.rs
src/commands/help/: command_finder.rs  mod.rs
src/commands/jokenpo/: game_move.rs  mod.rs
src/commands/memory/: game_mode.rs  game_state.rs  mod.rs  player_state.rs  tile.rs
src/commands/mines/: game_state.rs  mod.rs  tile.rs
src/commands/race/: lobby.rs  mod.rs  progress_message.rs  state.rs
src/constants/: color.rs  emoji.rs  mod.rs
src/database/: blacklist.rs  mod.rs  models.rs  reward.rs  transaction.rs  user.rs
src/events/: mention.rs  mod.rs
src/functions/: format.rs  mod.rs  prompt.rs  time.rs
src/functions/bot/: avatar.rs  blacklist.rs  mod.rs
src/functions/interactions/: component.rs  mod.rs  opponent.rs  pagination.rs
src/functions/time/: mod.rs  time.rs
src/functions/ui/: component.rs  mod.rs  pagination.rs  pretty_message.rs
