[workspace]
members = ["."]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[package]
name = "fumo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
dotenvy.workspace = true
poise.workspace = true
rand.workspace = true
serenity.workspace = true
sqlx.workspace = true
tokio.workspace = true

[workspace.dependencies]
chrono = { version = "0.4", features = ["clock"] }
dotenvy = "0.15.7"
rand = "0.9.2"

[workspace.dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio-rustls", "sqlite"]

[workspace.dependencies.serenity]
version = "0.12"

[workspace.dependencies.tokio]
version = "1.21.2"
features = [
    "macros",
    "rt-multi-thread",
]

[workspace.dependencies.poise]
git = "https://github.com/serenity-rs/poise.git"
branch = "next"
features = [
    "cache",
    "collector",
]
